fixed alignment of stock cards content

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ h1 {
   box-shadow: 4px 8px 14px rgba(152, 193, 255, 0.25);
   width: 100%;
   display: grid;
+  grid-template-columns: 50% 50%;
   /* background-color: white; */
   background-color: rgba(9, 9, 9, 0.466);
 
